ExtractionPipeline-lab/api/pipeline/deploy/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: oriane-pipeline-api-ingress
  namespace: oriane-pipeline-api
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    alb.ingress.kubernetes.io/certificate-arn: ${ALB_CERTIFICATE_ARN}
    alb.ingress.kubernetes.io/load-balancer-name: oriane-pipeline-api-alb
    alb.ingress.kubernetes.io/group.name: oriane-apis
spec:
  rules:
  - host: ${ALB_DOMAIN}
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: oriane-pipeline-api-service
            port:
              number: 80
  - host: ${ALB_DOMAIN}
    http:
      paths:
      - path: /docs
        pathType: Prefix
        backend:
          service:
            name: oriane-pipeline-api-service
            port:
              number: 80
      - path: /openapi.json
        pathType: Prefix
        backend:
          service:
            name: oriane-pipeline-api-service
            port:
              number: 80
